<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >

    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:ems="10"
            android:id="@+id/editText"
            android:layout_weight="1"
            android:text="0"
            android:gravity="right|center_vertical"
            android:textSize="40sp"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"/>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

        <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="7"
                android:id="@+id/button7"
                android:layout_weight="1"
                android:layout_gravity="left|top"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="8"
                android:id="@+id/button8"
                android:layout_weight="1"
                android:layout_gravity="left|top"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="9"
                android:id="@+id/button9"
                android:layout_weight="1"
                android:layout_gravity="left|top"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/divide_button"
                android:id="@+id/buttonDivide"
                android:layout_weight="1"
                android:layout_gravity="left|top"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">
        <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="4"
                android:id="@+id/button4"
                android:layout_weight="1"
                android:layout_gravity="left|top"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="5"
                android:id="@+id/button5"
                android:layout_weight="1"
                android:layout_gravity="left|top"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="6"
                android:id="@+id/button6"
                android:layout_weight="1"
                android:layout_gravity="left|top"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/multiply_button"
                android:id="@+id/buttonMultiply"
                android:layout_weight="1"
                android:layout_gravity="left|top"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

        <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="1"
                android:id="@+id/button1"
                android:layout_weight="1"
                android:layout_gravity="left|top"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="2"
                android:id="@+id/button2"
                android:layout_weight="1"
                android:layout_gravity="left|top"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="3"
                android:id="@+id/button3"
                android:layout_weight="1"
                android:layout_gravity="left|top"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/subtract_button"
                android:id="@+id/buttonSubtract"
                android:layout_weight="1"
                android:layout_gravity="left|top"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

        <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="0"
                android:id="@+id/button0"
                android:layout_weight="1"
                android:layout_gravity="left|top"/>


        <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/decimal_button"
                android:id="@+id/buttonDecimal"
                android:layout_weight="1"
                android:layout_gravity="left|top"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/equals_button"
                android:id="@+id/buttonEquals"
                android:layout_weight="1"
                android:layout_gravity="left|top"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/add_button"
                android:id="@+id/buttonAdd"
                android:layout_weight="1"
                android:layout_gravity="left|top"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

        <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="Clear"
                android:id="@+id/buttonClear"
                android:layout_weight="1"
                android:layout_gravity="left|top"/>

    </LinearLayout>

</LinearLayout>
